adding product api
